src/FinancialForce Accounting/objects/codaLookup__c.object
<CustomObject>
    <description>An internal object with no records. All FinancialForce Accounting users must have full access.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgedAnalysisDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aged Analysis Definition</label>
        <referenceTo>codaAgedAnalysisDef__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckRange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check Range</label>
        <referenceTo>codaCheckRange__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreditNote</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup integration rule field (Detail)</description>
        <label>Detail Integration Rule</label>
        <referenceTo>codaIntegrationRule__c</referenceTo>
        <relationshipLabel>Detail Integration Rule</relationshipLabel>
        <relationshipName>DetailIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 1 field</description>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 2 field</description>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup dimension 3 field</description>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HeaderIntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup integration rule field (Header)</description>
        <label>Header Integration Rule</label>
        <referenceTo>codaIntegrationRule__c</referenceTo>
        <relationshipLabel>Header Integration Rule</relationshipLabel>
        <relationshipName>HeaderIntegrationRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomeScheduleStagingJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DEPRECATED:Inc Schedule Staging Journal</label>
        <referenceTo>codaIncScheduleStagingJnl__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InquiryTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inquiry Template</label>
        <referenceTo>InquiryTemplate__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookupDateTime__c</fullName>
        <label>Lookup Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LookupDate__c</fullName>
        <label>Lookup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LookupNumber3__c</fullName>
        <label>Lookup Number3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LookupNumber__c</fullName>
        <label>Lookup Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selection</label>
        <referenceTo>codaSelection__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year</label>
        <referenceTo>codaYear__c</referenceTo>
        <relationshipLabel>Lookups</relationshipLabel>
        <relationshipName>Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>codaPeriod2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period2</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Lookups (Period2)</relationshipLabel>
        <relationshipName>Lookups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lookup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>